# evm-interactions

./: Cargo.toml  README.md  TEST_PLAN.md
.github/workflows/: release.yml  rust.yml
src/: cli.rs  config.rs  display.rs  ens.rs  export.rs  main.rs  model.rs  rpc.rs
src/commands/: balance.rs  block.rs  call.rs  config.rs  ens.rs  gas.rs  logs.rs  mod.rs  tx.rs
