[package]
name = "evm-interactions"
version = "0.1.0"
edition = "2021"
description = "CLI tool for interacting with EVM-compatible blockchains"
license = "MIT"
repository = "https://github.com/user/evm-interactions"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
colored = "3"
chrono = "0.4"
futures = "0.3"
toml = "1"
dirs = "6"

[profile.release]
strip = true
lto = true
codegen-units = 1
